--- a/index.html
+++ b/index.html
@@ -13,9 +13,23 @@
         <div class ="right-btns">
             <button class = "gmail-btn">Gmail</button>
             <button class = "images-btn">Images</button>
-            <button class = "apps-btn">Apps</button>
-            <button class = "profile-btn">Profile</button>
         </div>
+
+ 
+        <div class ="container"> 
+            <img id ="app-icon" src="images/google-apps-icon-png-28.png" 
+            width="16"
+            height="16"
+            alt="Google apps image">
+     
+            <span class ="highlight-app"></span>
+        </div>
+
+
+        <img id ="git-icon" src="images/git.png" 
+        width="24"
+        height="24"
+        alt="Github logo image">
 
     </header>
 
