--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
             <span class ="highlight-app"></span>
         </div>
 
-
         <img id ="git-icon" src="images/git.png" 
         width="24"
         height="24"
         alt="Github logo image">
 
     </header>
+
+    <body>
+        <img id ="google-logo" src="images/googlelogo_color_272x92dp.png" alt="Google logo">
+
+        <div id ="search-bar"> </div>
+
+    </body>
+
 
     <footer>
         
