ADded form functionality to search bar. Including symbols and search buttons

--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
     <body>
         <img id ="google-logo" src="images/googlelogo_color_272x92dp.png" alt="Google logo">
 
-        <div id ="search-bar"> </div>
+        <div id ="search-bar">  </div>
+
+        <div class = "search-bar-pics">
+            <img id ="microphone-pic" src="images/google-microphone.png" alt="Google microphone symbol">
+            <img id ="search-pic" src="images/google-search.png" alt="Google search symbol">
+        </div>
+
+        <input type="text">
+
+        <div class ="searchbar-btns">
+            <button class = "search-btn">Google Search</button>
+            <button class = "lucky-btn">I'm Feeling Lucky</button>
+        </div>
 
     </body>
 
