Added a footer using CSS Flexbox.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
 
 
     <footer>
-        
+        <div class="left-footer"> 
+            <button class = "advertising-btn">Advertising</button>
+            <button class = "business-btn">Business</button>
+            <button class = "searchworks-btn">How Search Works</button>
+        </div>
+
+        <div class="right-footer"> 
+            <button class = "privacy-btn">Privacy</button>
+            <button class = "terms-btn">Terms</button>
+            <button class = "settings-btn">Settings</button>
+        </div>
     </footer>
 </html>
