Refractored CSS code to utilize flexboxes to improve page responsiveness

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="UTF-8">
-        <title>dog </title>
+        <title>Google-Homepage </title>
         <link href="styles/style.css" rel="stylesheet">
     </head>
     <header>
@@ -35,14 +35,11 @@
     <body>
         <img id ="google-logo" src="images/googlelogo_color_272x92dp.png" alt="Google logo">
 
-        <div id ="search-bar">  </div>
-
-        <div class = "search-bar-pics">
-            <img id ="microphone-pic" src="images/google-microphone.png" alt="Google microphone symbol">
+        <div id ="search-bar"> 
             <img id ="search-pic" src="images/google-search.png" alt="Google search symbol">
+            <input type="text">
+            <img id ="microphone-pic" src="images/google-microphone.png" alt="Google microphone symbol">
         </div>
-
-        <input type="text">
 
         <div class ="searchbar-btns">
             <button class = "search-btn">Google Search</button>
