Added an image profile link at the top right that leads to my github repo

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
             <span class ="highlight-app"></span>
         </div>
 
-        <img id ="git-icon" src="images/git.png" 
+        <a href="https://github.com/Morgan-Li"
+        target="_blank"> 
+
+        <img id="profile" src="images/git.png" 
         width="24"
         height="24"
-        alt="Github logo image">
+        alt="git logo">
+        </a>
 
     </header>
 
